# movie-review-sentiment-analyzer

./: app.py  graph_analysis.py  main.py  pyproject.toml  readme  sentiment_model.py
static/: style.css
templates/: index.html
