[project]
name = "mini-project-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cinemagoer>=2023.5.1",
    "flask>=3.1.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "textblob>=0.19.0",
]
